# oh-my-agentic-score

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OMAS_V2.1_FINAL_COMPLETE.md  README.ko.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/projects/: page.tsx
dashboard/app/scoring/: page.tsx  scoring-data.ts
dashboard/app/sessions/: page.tsx
dashboard/app/tools/: page.tsx
dashboard/components/: CalendarPicker.tsx  ChartProvider.tsx  DimensionGauge.tsx  DimensionRadar.tsx  PeriodFilter.tsx  ProjectFilter.tsx  RadarChart.tsx  ScoreCard.tsx  SessionTable.tsx  ThreadTypePieChart.tsx  ToolBreakdownChart.tsx  ToolCallBarChart.tsx  TrendLineChart.tsx
dashboard/lib/: data.ts  types.ts
demo/: dashboard-demo.md  demo.tape
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: cli-commands.md  cloud-upload.md  dashboard.md  fair-comparison.md  getting-started.md  scoring.md  thread-types.md  tui-mode.md
docs/reference/: api.md  configuration.md
homebrew-tap/: README.md
homebrew-tap/.github/workflows/: update-formula.yml
homebrew-tap/Formula/: oh-my-agentic-score.rb
src/omas/: __init__.py  cli.py  config.py  dashboard_server.py  models.py
src/omas/classifier/: thread_classifier.py
src/omas/cloud/: api_client.py  auth.py  credentials.py  upload.py
src/omas/display/: dashboard.py  report.py  (+1 more)
tests/: test_ai_written_lines.py  test_autonomy.py  test_autonomy_v2.py  test_cross_session_parallelism.py  test_density.py  test_density_v2.py  test_human_message_filtering.py  test_trust.py
(+13 files in other folders)
