[project]
name = "oh-my-agentic-score"
version = "0.6.0"
description = "Measure agentic coding performance using Thread-Based Engineering framework"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["ai", "agentic", "metrics", "thread-engineering", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "textual>=0.40",
    "trogon>=0.5",
    "requests>=2.31",
    "requests-oauthlib>=2.0",
    "keyring>=25.0",
]

[project.urls]
Homepage = "https://github.com/HwangTaehyun/oh-my-agentic-score"
Documentation = "https://hwangtaehyun.github.io/oh-my-agentic-score"
Repository = "https://github.com/HwangTaehyun/oh-my-agentic-score"
Issues = "https://github.com/HwangTaehyun/oh-my-agentic-score/issues"

[project.scripts]
omas = "omas.cli:cli"
oh-my-agentic-score = "omas.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omas"]

[tool.hatch.build.targets.sdist.force-include]
"dashboard/out" = "dashboard/out"

[tool.hatch.build.targets.wheel.force-include]
"dashboard/out" = "omas/_dashboard"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
